@@ -26,8 +26,8 @@
  * @summary Basic test for JFR jdk.VirtualThreadXXX events
  * @requires vm.continuations
  * @modules jdk.jfr java.base/java.lang:+open
- * @compile --enable-preview -source ${jdk.version} JfrEvents.java
- * @run testng/othervm --enable-preview JfrEvents
+ * @enablePreview
+ * @run testng/othervm JfrEvents
  */
 
 import java.io.IOException;
